Relax CORS and API auth for frontend testing
Updates Spring Security to use an explicit CORS configuration source with wildcard origins/headers and keeps JWT stateless auth in place. It also temporarily permits unauthenticated access to category, food-item, and image endpoints (alongside /auth/**) to unblock frontend integration/testing. Additionally, multipart upload limits were added in application.properties (10MB file/request), and a new uploaded image asset was added under uploads/.